//
// Protocol buffers definition
//
syntax = "proto3";
package pt.tecnico.rec.grpc;
import "google/protobuf/any.proto";

message ReadRequest {
  string name = 1;
}

message ReadResponse {
  google.protobuf.Any value = 1;
  int32 version = 2;
}

message WriteRequest {
  string name = 1;
  google.protobuf.Any value = 2;
  int32 version = 3;
}

message WriteResponse {

}

message PingRequest {
  string path = 1;
}

message PingResponse {
  string outputText = 1;
  string path = 2;
}

service RecordService {
  rpc ping(PingRequest) returns (PingResponse);
  rpc read(ReadRequest) returns (ReadResponse);
  rpc write(WriteRequest) returns (WriteResponse);
}
